syntax = "proto3";

option go_package = "genproto/lesson_service";

package lesson_service_go;
import "google/protobuf/empty.proto";


service LessonService {
    rpc Create(CreateLesson) returns (GetLesson) {}
    rpc GetByID(LessonPrimaryKey) returns (GetLesson) {}
    rpc GetList(GetListLessonRequest) returns (GetListLessonResponse) {}
    rpc Update(UpdateLesson) returns (GetLesson) {}
    rpc Delete(LessonPrimaryKey) returns (google.protobuf.Empty) {}
}

message LessonPrimaryKey {
    string id = 1;
}

message CreateLesson {
    string theme = 1;
    string links = 2;
    string type_of_group = 3;
}

message GetLesson {
    string theme = 1;
    string links = 2;
    string type_of_group = 3;
    string created_at = 4;
    string updated_at = 5;
    string id = 6;
}

message UpdateLesson {
    string theme = 1;
    string links = 2;
    string type_of_group = 3;
    string id = 4;

}

message GetListLessonRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListLessonResponse {
    int64 Count = 1;
    repeated GetLesson Lessons = 2;
}
